k8s/apps/hello-app/overlays/prod/istio-vs-patch.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-app-vs
spec:
  hosts:
    - prod.hello.local
  gateways:
    - hello-app-gateway-prod
  http:
    - route:
        - destination:
            host: hello-app-svc-prod
            port:
              number: 80
